Fix scrollbar issue in Firefox

--- a/source/css/journal.css
+++ b/source/css/journal.css
@@ -259,7 +259,9 @@ a {
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; }
+  justify-content: space-between; 
+  scrollbar-width: none;
+}
   .side-container .nav-head {
     padding: 30px 28px 30px 20px;
     cursor: hand;
@@ -321,7 +323,9 @@ a {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  padding: 30px 0; }
+  padding: 30px 0; 
+  scrollbar-width: none;
+}
   .extra-container .pagination {
     display: flex;
     flex-direction: column; }
